[package]
name = "bison"
version = "0.0.0"
license = "MIT"
authors = ["ibraheem <ibrah1440@gmail.com>"]
edition = "2021"
description = "A powerful web-application framework that does the heavy lifting for you."
repository = "https://github.com/ibraheemdev/bison"
readme = "README.md"

[dependencies]
async-trait = "0.1.51"
bytes = "1.1.0"
futures-core = "0.3.17"
http = "0.2.4"
matchit = "0.4.2"
bison-codegen = { path = "./bison-codegen" }
serde = "1.0.130"
serde_urlencoded = "0.7.0"
pin-project-lite = "0.2.7"
once_cell = "1.9.0"
serde_json = { version = "1.0.73", optional = true }
mime = "0.3.16"

[workspace]
members = [
    "bison-codegen",
    "bison-hyper"
]

[features]
default = ["json"]
json = ["serde_json"]
not-send = []

[dev-dependencies]
bison-hyper = { path = "./bison-hyper" }
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.10.0", features = ["full"] }
