[package]
name = "bison"
version = "0.0.0"
license = "MIT"
authors = ["ibraheem <ibrah1440@gmail.com>"]
edition = "2021"
description = "A powerful web-application framework that does the heavy lifting for you."
repository = "https://github.com/ibraheemdev/bison"
readme = "README.md"

[dependencies]
matchit = "0.4.2"
http = "0.2.6"
bytes = "1.1.0"
mime = "0.3.16"
futures-core = "0.3.21"
async-trait = "0.1.52"
once_cell = "1.9.0"

[dev-dependencies]
