[package]
name = "bison-hyper"
version = "0.1.0"
edition = "2018"

[dependencies]
bison = { path = "../../bison", default-features = true }
hyper = { version = "0.14", features = ["http1", "http2", "server", "tcp", "stream"] }
http-body = "0.4"
futures-core = "0.3"

[dev-dependencies]
tokio = { version = "1.10.0", features = ["full"] }
